# svg-text2path

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  REPORT_TEXT51_PROGRESS.md  TEXT_REFERENCE_CHECKLIST.md  cliff.toml  font_list_table.md  main.py  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
SVG-BBOX/: .gitignore  .npmignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SvgVisualBBox.min.js  browser-utils.cjs  cliff.toml  sbb-chrome-getbbox.cjs  sbb-comparer.cjs  sbb-fix-viewbox.cjs  sbb-getbbox.cjs  sbb-inkscape-extract.cjs  sbb-inkscape-svg2png.cjs  sbb-inkscape-text2path.cjs  sbb-svg2png.cjs  sbb-test.cjs  svg-bbox.cjs  tsconfig.json  vitest.config.js
SVG-BBOX/config/: timeouts.cjs  (+1 more)
assets/: svg-text2path_logo_text.txt
docs_dev/: competitor_comparison_report.md  failed_attempts.md  inkscape_text_to_path.md  parts_diff_sorted_latest.md  parts_diff_summary.md  plan_fidelity.md
examples/: convert_lxml_document.py  convert_minidom_document.py
samples/: batch_config_example.yaml
scripts/: pre-push.sh  run_text51_iteration.py
src/: analyze_path.py  frame_comparer.py  main.py
svg_text2path/: __init__.py  api.py  config.py  logging.py
tests/: __init__.py  conftest.py  test_batch.py  test_batch_regression.py  test_cli.py  test_compare_cli.py  test_dependencies.py  test_deps_cli.py  test_e2e_conversion.py  test_font_downloader.py  test_fonts_cache.py  test_fonts_cli.py  test_format_epub.py  test_format_javascript_code.py  test_format_plaintext.py  test_format_python_code.py  test_format_registry.py  test_format_rst.py  test_formats.py  test_remote_ssrf.py  test_visual_comparison.py  test_visual_comparison_unit.py
text2path/: analyze_path.py  font_report.py  font_report_html.py  frame_comparer.py  main.py  text_flow_tester.py
(+68 files in other folders)
