[project]
name = "text2path"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fonttools>=4.60.1",
    "numpy>=2.2.6",
    "pillow>=12.0.0",
    "python-bidi>=0.6.7",
    "svg-path>=7.0",
    "uharfbuzz>=0.52.0",
]

[project.scripts]
t2p_convert = "text2path.main:main"
t2p_compare = "text2path.frame_comparer:main"
t2p_font_report = "text2path.font_report:main"
t2p_font_report_html = "text2path.font_report_html:main"
t2p_analyze_path = "text2path.analyze_path:main"
t2p_text_flow_test = "text2path.text_flow_tester:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["text2path"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
